--- a/client/templates/application/home.html
+++ b/client/templates/application/home.html
@@ -37,59 +37,7 @@
 
 
     <section class="main-section" id="service"><!--main-section-start-->
-        <div class="container">
-            <h2>Services</h2>
-            <h6>We offer exceptional service with complimentary hugs.</h6>
-
-            <div class="row">
-                <div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
-                    <div class="service-list">
-                        <div class="service-list-col1">
-                            <i class="fa fa-paw"></i>
-                        </div>
-                        <div class="service-list-col2">
-                            <h3>branding &amp; identity</h3>
-
-                            <p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
-                        </div>
-                    </div>
-                    <div class="service-list">
-                        <div class="service-list-col1">
-                            <i class="fa fa-gear"></i>
-                        </div>
-                        <div class="service-list-col2">
-                            <h3>web development</h3>
-
-                            <p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
-                        </div>
-                    </div>
-                    <div class="service-list">
-                        <div class="service-list-col1">
-                            <i class="fa fa-apple"></i>
-                        </div>
-                        <div class="service-list-col2">
-                            <h3>mobile design</h3>
-
-                            <p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
-                        </div>
-                    </div>
-                    <div class="service-list">
-                        <div class="service-list-col1">
-                            <i class="fa fa-medkit"></i>
-                        </div>
-                        <div class="service-list-col2">
-                            <h3>24/7 Support</h3>
-
-                            <p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
-                        </div>
-                    </div>
-                </div>
-                <figure class="col-lg-8 col-sm-6  text-right wow fadeInUp delay-02s">
-                    <img src="/img/macbook-pro.png" alt="">
-                </figure>
-
-            </div>
-        </div>
+        {{> services }}
     </section>
     <!--main-section-end-->
 
@@ -147,227 +95,7 @@
     <!--main-section alabaster-end-->
 
     <section class="main-section paddind" id="Portfolio"><!--main-section-start-->
-        <div class="container">
-            <h2>Portfolio</h2>
-            <h6>Fresh portfolio of designs that will keep you wanting more.</h6>
-
-            <div class="portfolioFilter">
-                <ul class="Portfolio-nav wow fadeIn delay-02s">
-                    <li>
-                        <a href="#" data-filter="*" class="current">All</a>
-                    </li>
-                    <li>
-                        <a href="#" data-filter=".branding">Branding</a>
-                    </li>
-                    <li>
-                        <a href="#" data-filter=".webdesign">Web design</a>
-                    </li>
-                    <li>
-                        <a href="#" data-filter=".printdesign">Print design</a>
-                    </li>
-                    <li>
-                        <a href="#" data-filter=".photography">Photography</a>
-                    </li>
-                </ul>
-            </div>
-
-        </div>
-        <div class="portfolioContainer wow fadeInUp delay-04s">
-            <div class="Portfolio-box printdesign">
-                <a href="#modal-1" data-toggle="modal" data-target="#modal-1">
-                    <img src="/img/Portfolio-pic1.jpg" alt="">
-                </a>
-
-                <h3>Foto Album</h3>
-
-                <p>Print Design</p>
-            </div>
-            <div class="Portfolio-box webdesign">
-                <a href="#modal-2" data-toggle="modal" data-target="#modal-2">
-                    <img src="/img/Portfolio-pic2.jpg" alt="">
-                </a>
-
-                <h3>Luca Theme</h3>
-
-                <p>Web Design</p>
-            </div>
-            <div class="Portfolio-box branding">
-                <a href="#modal-3" data-toggle="modal" data-target="#modal-3">
-                    <img src="/img/Portfolio-pic3.jpg" alt="">
-                </a>
-
-                <h3>Uni Sans</h3>
-
-                <p>Branding</p>
-            </div>
-            <div class="Portfolio-box photography">
-                <a href="#modal-4" data-toggle="modal" data-target="#modal-4">
-                    <img src="/img/Portfolio-pic4.jpg" alt="">
-                </a>
-
-                <h3>Vinyl Record</h3>
-
-                <p>Photography</p>
-            </div>
-            <div class="Portfolio-box branding">
-                <a href="#modal-5" data-toggle="modal" data-target="#modal-5">
-                    <img src="/img/Portfolio-pic5.jpg" alt="">
-                </a>
-
-                <h3>Hipster</h3>
-
-                <p>Branding</p>
-            </div>
-            <div class="Portfolio-box photography">
-                <a href="#modal-6" data-toggle="modal" data-target="#modal-6">
-                    <img src="/img/Portfolio-pic6.jpg" alt="">
-                </a>
-
-                <h3>Windmills</h3>
-
-                <p>Photography</p>
-            </div>
-        </div>
-        <div class="portfolioModalsContainer">
-            <div class="modal" id="modal-1">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        </div>
-                        <div class="modal-body">
-                            <img src="/img/Portfolio-pic3.jpg" alt="">
-
-                            <div class="description-box">
-                                <h4>Coffee Cup</h4>
-
-                                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-                                    auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <a class="btn btn-primary" href="https://www.google.com" target="_blank">View details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal" id="modal-2">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        </div>
-                        <div class="modal-body">
-                            <img src="/img/Portfolio-pic3.jpg" alt="">
-
-                            <div class="description-box">
-                                <h4>Coffee Cup</h4>
-
-                                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-                                    auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <a class="btn btn-primary" href="https://www.google.com" target="_blank">View details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal" id="modal-3">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        </div>
-                        <div class="modal-body">
-                            <img src="/img/Portfolio-pic3.jpg" alt="">
-
-                            <div class="description-box">
-                                <h4>Coffee Cup</h4>
-
-                                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-                                    auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <a class="btn btn-primary" href="https://www.google.com" target="_blank">View details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal" id="modal-4">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        </div>
-                        <div class="modal-body">
-                            <img src="/img/Portfolio-pic3.jpg" alt="">
-
-                            <div class="description-box">
-                                <h4>Coffee Cup</h4>
-
-                                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-                                    auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <a class="btn btn-primary" href="https://www.google.com" target="_blank">View details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal" id="modal-5">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        </div>
-                        <div class="modal-body">
-                            <img src="/img/Portfolio-pic3.jpg" alt="">
-
-                            <div class="description-box">
-                                <h4>Coffee Cup</h4>
-
-                                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-                                    auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <a class="btn btn-primary" href="https://www.google.com" target="_blank">View details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal" id="modal-6">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        </div>
-                        <div class="modal-body">
-                            <img src="/img/Portfolio-pic3.jpg" alt="">
-
-                            <div class="description-box">
-                                <h4>Coffee Cup</h4>
-
-                                <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-                                    auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-                            </div>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <a class="btn btn-primary" href="https://www.google.com" target="_blank">View details</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {{> portfolio }}
     </section>
     <!--main-section-end-->
 
