--- a/client/templates/home/contact.html
+++ b/client/templates/home/contact.html
@@ -7,17 +7,22 @@
                     <span>+58 424-216-9569</span>
                 </div>
                 <div class="contact-info-box email clearfix">
-                    <h3><i class="fa fa-pencil"></i>Correo electrónico (Empresarial):</h3>
+                    <h3><i class="fa fa-envelope"></i>Correo electrónico (Empresarial):</h3>
                     <span>rserrano@mowebjobs.com</span>
                 </div>
                 <div class="contact-info-box email clearfix">
-                    <h3><i class="fa fa-pencil"></i>Correo electrónico:</h3>
+                    <h3><i class="fa fa-envelope"></i>Correo electrónico:</h3>
                     <span>rameduardserrano@gmail.com</span>
                 </div>
                 <ul class="social-link">
                     <li class="github">
-                        <a href="https://github.com/RamEduard">
+                        <a href="https://github.com/RamEduard" data-toggle="tooltip" data-placement="top" title="GitHub">
                             <i class="fa fa-github"></i>
+                        </a>
+                    </li>
+                    <li class="bitbucket">
+                        <a href="https://bitbucket.org/rameduard" data-toggle="tooltip" data-placement="top" title="Bitbucket">
+                            <i class="fa fa-bitbucket"></i>
                         </a>
                     </li>
                 </ul>
