Footer spanish added.

--- a/client/templates/includes/footer.html
+++ b/client/templates/includes/footer.html
@@ -2,7 +2,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-logo"><a href="#"><img src="/img/footer-logo.png" alt=""></a></div>
-            <span class="copyright">Copyright © 2014 Knight Theme By <a href="#">W3Goods</a>.</span>
+            <span class="copyright">Derechos Reservados © 2015 por Ramón Serrano.</span>
         </div>
     </footer>
 </template>
