Custom not found spanish.

--- a/client/views/includes/not_found.html
+++ b/client/views/includes/not_found.html
@@ -6,7 +6,7 @@
                 <h2>Error 404: Recurso no encontrado</h2>
                 <p>La página o la URL que usted está buscando no se encuentra disponible.</p>
                 <p><a class="btn btn-primary" 
-                      href="{{ pathFor 'postsList' }}">Volver al Inicio</a>
+                      href="{{ pathFor 'home' }}">Volver al Inicio</a>
                 </p>
             </div>
         </div>
