--- a/client/stylesheets/home.css
+++ b/client/stylesheets/home.css
@@ -178,11 +178,11 @@ p{
     padding:0;
     text-align:center;
 }
-.main-nav li{
+.main-nav li {
     display:inline;
     margin:0 1px;
 }
-.main-nav li a{
+.main-nav li a {
     color:#222222;
     display:inline-block;
     font-family: 'Montserrat', sans-serif;
@@ -195,9 +195,12 @@ p{
     -webkit-transition:all 0.3s ease-in-out;
 }
 
-.main-nav li a:hover { 
-    text-decoration:none;
+.main-nav li a:active,
+.main-nav li a:focus,
+.main-nav li a:hover {
+    background: rgba(0,0,0,0.02);
     color: #7cc576;
+    text-decoration:none;
 }
 
 .small-logo{ 
