--- a/client/views/home/services.html
+++ b/client/views/home/services.html
@@ -1,48 +1,46 @@
 <template name="services">
 	<div class="container">
-        <h2>Services</h2>
-        <h6>We offer exceptional service with complimentary hugs.</h6>
+        <h2>Servicios</h2>
 
         <div class="row">
             <div class="col-lg-4 col-sm-6 wow fadeInLeft delay-05s">
                 <div class="service-list">
                     <div class="service-list-col1">
-                        <i class="fa fa-paw"></i>
-                    </div>
-                    <div class="service-list-col2">
-                        <h3>branding &amp; identity</h3>
-
-                        <p>Proin iaculis purus digni consequat sem digni ssim. Donec entum digni ssim.</p>
-                    </div>
-                </div>
-                <div class="service-list">
-                    <div class="service-list-col1">
                         <i class="fa fa-gear"></i>
                     </div>
                     <div class="service-list-col2">
-                        <h3>web development</h3>
-
-                        <p>Proin iaculis purus consequat sem digni ssim. Digni ssim porttitora .</p>
+                        <h3>Desarrollo Web</h3>
+                        <p>Desarrollo de páginas web con el uso de plantillas con diseño adaptable a todos las pantallas.</p>
                     </div>
                 </div>
                 <div class="service-list">
                     <div class="service-list-col1">
-                        <i class="fa fa-apple"></i>
+                        <i class="fa fa-mobile"></i>
                     </div>
                     <div class="service-list-col2">
-                        <h3>mobile design</h3>
-
-                        <p>Proin iaculis purus consequat digni sem digni ssim. Purus donec porttitora entum.</p>
+                        <h3>Diseño Móvil</h3>
+                        <p>Para páginas que quieras adaptar a un diseño móvil o adaptable y fluido en todos los dispositivos PC, Tablets, Smartphones.</p>
                     </div>
                 </div>
                 <div class="service-list">
                     <div class="service-list-col1">
-                        <i class="fa fa-medkit"></i>
+                        <i class="fa fa-clock-o"></i>
                     </div>
                     <div class="service-list-col2">
-                        <h3>24/7 Support</h3>
-
-                        <p>Proin iaculis purus consequat sem digni ssim. Sem porttitora entum.</p>
+                        <h3>Tiempo Real</h3>
+                        <p>Aplicaciones, sitios web o sistemas de información desarrollados con plataformas orientadas al soporte de aplicaciones en tiempo real.</p>
+                    </div>
+                </div>
+                <div class="service-list">
+                    <div class="service-list-col1">
+                        <i class="fa fa-question"></i>
+                    </div>
+                    <div class="service-list-col2">
+                        <h3>Asesoría de Desarrollo Web</h3>
+                        <p>
+                            Este es un servicio para emprendedores que desean desarrollar un sitio web que 
+                            tienen dudas de cual será la mejor opción de plataforma para desarrollar su web de acuerdo a sus necesidades.
+                        </p>
                     </div>
                 </div>
             </div>
