Padding-top of sections changed to 60px.

--- a/client/views/application/home.html
+++ b/client/views/application/home.html
@@ -24,9 +24,11 @@
     </section>
     <!--main-section-end-->
 
-    <section class="main-section alabaster"><!--main-section alabaster-start-->
+    <!--
+    <section class="main-section alabaster">
         {{> featuredWork }}
     </section>
+    -->
     <!--main-section alabaster-end-->
 
     <section class="main-section paddind" id="portafolio"><!--main-section-start-->
