--- a/client/views/includes/home-menu.html
+++ b/client/views/includes/home-menu.html
@@ -8,9 +8,22 @@
                 <li class="small-logo"><a href="#header"><img src="/img/small-logo.png" alt=""></a></li>
                 <li><a href="#equipo">Equipo</a></li>
                 <li><a href="#contacto">Contacto</a></li>
-                {{#unless currentUser }}
-                <li><a href="#">Iniciar sesión</a></li>
-                {{/unless }}
+                {{#if currentUser}}
+                    <li id="user-actions" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            {{currentUserDisplayName}} <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>
+                                <a href="#" id="userProfile"><i class="fa fa-user fa-fw"></i> Perfil de usuario</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li><a href="#" id="signOut"><i class="fa fa-sign-out fa-fw"></i> Cerrar sesion</a></li>
+                        </ul>
+                    </li>
+                {{else}}
+                    <li id="user-actions"><a href="{{pathFor 'signIn'}}">Iniciar sesion</a></li>
+                {{/if}}
             </ul>
             <a class="res-nav_click" href="#"><i class="fa fa-bars"></i></a>
         </div>
@@ -33,19 +46,22 @@
                 <li><a class="navigation" href="#portafolio">Portafolio</a></li>
                 <li><a class="navigation" href="#equipo">Equipo</a></li>
                 <li><a class="navigation" href="#contacto">Contacto</a></li>
-                {{#unless currentUser }}
-                <li><a href="#">Iniciar sesión</a></li>
-                {{/unless }}
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">Action</a></li>
-                        <li><a href="#">Another action</a></li>
-                        <li><a href="#">Something else here</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#">Cerrar sesión</a></li>
-                    </ul>
-                </li>
+                {{#if currentUser}}
+                    <li id="user-actions" class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            {{currentUserDisplayName}} <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>
+                                <a href="#" id="userProfile"><i class="fa fa-user fa-fw"></i> Perfil de usuario</a>
+                            </li>
+                            <li class="divider"></li>
+                            <li><a href="#" id="signOut"><i class="fa fa-sign-out fa-fw"></i> Cerrar sesion</a></li>
+                        </ul>
+                    </li>
+                {{else}}
+                    <li id="user-actions"><a href="{{pathFor 'signIn'}}">Iniciar sesion</a></li>
+                {{/if}}
             </ul>
         </div><!-- /.navbar-collapse -->
     </nav>
